--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-/* Design */
-
+/* Left box */
 body {
     display: flex;
 }
@@ -98,6 +97,7 @@ body {
     bottom: 5px;
     text-align: center;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .logo-text {
@@ -111,4 +111,31 @@ body {
 
 .logo-image {
     padding: 13px;
+}
+
+/* Right box */
+.right-box {
+    display: flex;
+    flex-direction: column;
+} 
+
+header, footer{
+    flex: 2;
+    background-color: whitesmoke;
+}
+
+form {
+    flex: 1.8;
+}
+
+p {
+    margin-top: 7.5em;
+    margin-left: 3em;
+    font-size: 1.4rem;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+p + p {
+    margin-top: 1em;
 }
