--- a/styles.css
+++ b/styles.css
@@ -125,21 +125,68 @@ header, footer{
 }
 
 form {
-    flex: 1.8;
+    flex: 1.9;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    margin-left: 40px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
     margin-top: 7.5em;
-    margin-left: 3em;
+    margin-left: 40px;
     font-size: 1.4rem;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 55px;
 }
 
 p + p {
     margin-top: 1em;
+    margin-bottom: 55px;
+}
+
+form > label {
+    padding-top: 15px;
+    display: flex;
+    font-size: 1.2rem;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .input-row {
     display: flex;
+    gap: 5em;
+
 }
+
+.input-row > div {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-row > div + div {
+    margin-bottom: 8px;
+}
+
+div > label {
+    font-size: 10px;
+    letter-spacing: 1.5px
+}
+
+input {
+    border-radius: 5px;
+    border-width: 1px;
+}
+
+input:focus {
+    border: 1.5px blue solid;
+    outline: none;
+    box-shadow: 2px 2px gray;
+}
+
+input:invalid {
+    border: 1.5px red solid;
+}
+
